fixed scrollbar

--- a/wwwroot/css/navigation.css
+++ b/wwwroot/css/navigation.css
@@ -210,6 +210,6 @@
     }
 
     #span-djsite {
-        left: 173px;
+        left: 164px;
     }
 }
