--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,8 +1,6 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    /*overflow: overlay;*/ /* dla chrome */
-    /*overflow: auto;*/
 }
 
 html::-webkit-scrollbar {
@@ -11,17 +9,15 @@ html::-webkit-scrollbar {
 }
 
 html::-webkit-scrollbar-track {
-    background-color: transparent;
-    border-radius: 10px;
+    background-color: #3a6cdf;
 }
 
 html::-webkit-scrollbar-thumb {
-    background-color: #2c5ccc80;
-    border-radius: 10px;
+    background-color: #7e9fef;
 }
 
 html::-webkit-scrollbar-thumb:hover {
-    background-color: #2c5ccce6;
+    background-color: #b4c8fb;
 }
 
 main {
@@ -229,10 +225,6 @@ footer > div > div > a:hover {
 .tui-full-calendar-month-dayname-item {
     overflow-y: hidden;
 }
-
-/*.tui-full-calendar-month-week-item {
-    overflow-y: hidden;
-}*/
 
 .tui-full-calendar-month-guide-block {
     overflow-y: hidden;
